--- a/Onecalendar.Portal/Onecalendar.WebPortal/Content/Site.css
+++ b/Onecalendar.Portal/Onecalendar.WebPortal/Content/Site.css
@@ -101,12 +101,14 @@ h5, h6 {
     background-color: #efeeef;
     clear: both;
     padding-bottom: 35px;
+    
 }
 
     .main-content {
         background: url("../Images/accent.png") no-repeat;
         padding-left: 10px;
         padding-top: 30px;
+        width:60%;
     }
 
     .featured + .main-content {
