--- a/Onecalendar.Portal/Onecalendar.WebPortal/Site.Master
+++ b/Onecalendar.Portal/Onecalendar.WebPortal/Site.Master
@@ -6,10 +6,15 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="<%= ResolveUrl("~/Content/css/styles.css")%>" rel="stylesheet" type="text/css" />
 <link href="<%= ResolveUrl("~/Content/css/onecalendar.css")%>" rel="stylesheet" type="text/css" />
+<link href="<%= ResolveUrl("~/Content/css/fullcalendar.css")%>" rel="stylesheet" type="text/css" />
 <link href="<%= ResolveUrl("~/Content/themes/base/jquery-ui.css")%>" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="<%= ResolveUrl("~/Content/js/jquery-1.9.1.js")%>"></script>
-<script type="text/javascript" src="<%= ResolveUrl("~/Content/js/jquery-ui.js")%>"></script>
+<%--<script type="text/javascript" src="<%= ResolveUrl("~/Content/js/jquery-1.9.1.js")%>"></script>--%>
 <script type="text/javascript" src="<%= ResolveUrl("~/Content/js/carouselScript.js")%>"></script>
+<%--<script type="text/javascript" src="<%= ResolveUrl("~/Content/js/jquery-ui.min.js")%>"></script>--%>
+<script type="text/javascript" src="<%= ResolveUrl("~/Content/js/jquery.min.js")%>"></script>
+<script type="text/javascript" src="<%= ResolveUrl("~/Content/js/moment.min.js")%>"></script>
+<script type="text/javascript" src="<%= ResolveUrl("~/Content/js/fullcalendar.js")%>"></script>
+
 <head runat="server">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -41,7 +46,8 @@
                         <a href="#">
                             <img src="<%= ResolveUrl("~/Content/images/C1_Logo.jpg")%>" alt="Home" /></a>
                         <div style="float: right; margin-right: 15%; margin-top: 30px;">
-                            <a href="http://www.calendarone.com/en-us/home.aspx" target="_blank">Register /</a> <a href="<%= ResolveUrl("~/Public/Login/Login.aspx")%>" target="_self">Login</a>
+                            <%--<a href="http://www.calendarone.com/en-us/home.aspx" target="_blank">Register /</a>--%>
+                            <a href="<%= ResolveUrl("~/Public/UserRegistration.aspx")%>" target="_self">Register /</a> <a href="<%= ResolveUrl("~/Public/Login/Login.aspx")%>" target="_self">Login</a>
                         </div>
                     </div>
                 </div>
