add event save and read adjust the layout. TODO: search with start date and end date, search and save with tag.

--- a/Onecalendar.Portal/Onecalendar.WebPortal/Content/css/styles.css
+++ b/Onecalendar.Portal/Onecalendar.WebPortal/Content/css/styles.css
@@ -146,7 +146,7 @@ CONTACT FORM CLASSS
 Course FORM CLASSS
 -------------------------------------------------*/
 
-.course-form { background:#f1f1f1; padding:30px; width:740px; float:left; margin-bottom:50px; float:left;}
+.course-form { background:#f1f1f1; padding:30px; width:86%; float:left; margin-bottom:50px; float:left;}
 .course-form label {display: block; padding:10px 0 10px 0;}
 .course-form label span {display: block; color:#939191;font-size:14px; float:left; width:120px; text-align:left; padding:5px 20px 0 0;}
 .img {margin:10px 0px;}
