add company, user crud add a json testing page added the tag.

--- a/Onecalendar.Portal/Onecalendar.WebPortal/Content/css/styles.css
+++ b/Onecalendar.Portal/Onecalendar.WebPortal/Content/css/styles.css
@@ -42,9 +42,9 @@ HEADER CLASSES
 
 .menu-wrap { background:#ee3233;float:right;width:100%; }
 .menu{width:1000px;margin:0 auto; }
-.menu ul li{ list-style:none; float:left; font-size:18px; padding:10px;}
+.menu ul li{ list-style:none; float:left; font-size:18px; padding:10px;background:#ee3233;}
 .menu ul li a{color:#ffffff; text-decoration:none; padding:10px;}
-.menu ul li a:hover{ background:#66a7c5; padding:10px;}
+.menu ul li a:hover{ background:#66a7c5; padding:10px;background:#4682B3;}
 .menu ul li a.active{ background:#66a7c5; padding:10px;}
 
 .searchtext{margin:0px auto; height:32px; float:left;}
@@ -106,10 +106,11 @@ SUBMENU CLASSES
 -------------------------------------------------*/
 
 .submenu{ padding-top:20px;}
+.submenu ul { margin: 0; padding: 0; display: block;}
 .submenu ul li{ list-style:url(../images/arrow2.png) inside; border-bottom:#f2f2f2 solid 1px; line-height:40px;}
 .submenu ul li.-noborder-bottom{border-bottom:none;}
 .submenu ul li a{text-decoration:none; color:#939d9f;}
-.submenu ul li a:hover{color:#ee3233;}
+.submenu ul li a:hover{color:#ee3233;display: block;}
 .submenu ul li a.active{color:#ee3233;}
 
 /*-------------------------------------------------
