--- a/Onecalendar.Portal/Onecalendar.WebPortal/Site.Master
+++ b/Onecalendar.Portal/Onecalendar.WebPortal/Site.Master
@@ -7,11 +7,13 @@
 <link href="<%= ResolveUrl("~/Content/css/styles.css")%>" rel="stylesheet" type="text/css" />
 <link href="<%= ResolveUrl("~/Content/css/onecalendar.css")%>" rel="stylesheet" type="text/css" />
 <link href="<%= ResolveUrl("~/Content/css/fullcalendar.css")%>" rel="stylesheet" type="text/css" />
-<link href="<%= ResolveUrl("~/Content/themes/base/jquery-ui.css")%>" rel="stylesheet" type="text/css" />
+<link href="<%= ResolveUrl("~/Content/css/jquery-ui.css")%>" rel="stylesheet" type="text/css" />
+<link href="<%= ResolveUrl("~/Content/css/flatpickr.min.css")%>" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="<%= ResolveUrl("~/Content/js/moment.min.js")%>"></script>
-<script type="text/javascript" src="<%= ResolveUrl("~/Content/js/jquery.min.js")%>"></script>
+<script type="text/javascript" src="<%= ResolveUrl("~/Content/js/jquery-1.9.1.js")%>"></script>
 <script type="text/javascript" src="<%= ResolveUrl("~/Content/js/jquery-ui.min.js")%>"></script>
 <script type="text/javascript" src="<%= ResolveUrl("~/Content/js/fullcalendar.js")%>"></script>
+<script type="text/javascript" src="<%= ResolveUrl("~/Content/js/flatpickr.2.4.2.js")%>"></script>
 
 <head runat="server">
     <meta charset="utf-8" />
